fixes issue font-size and text-align in index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -150,13 +150,18 @@ body {
   text-align: center;
 }
 
-.team h3 {
+.team-list-item h3 {
   font-weight: 500;
   font-size: inherit;
   line-height: inherit;
   letter-spacing: inherit;
+  text-align: inherit;
 
   color: var(--title-text-color);
+}
+
+.team-list-item p {
+  text-align: inherit;
 }
 
 .address a {
